[gd_scene load_steps=4 format=3 uid="uid://dhcdpm2qymit0"]

[ext_resource type="Script" path="res://destructible_floor.gd" id="1_j2vmw"]
[ext_resource type="PackedScene" uid="uid://cs4t3jf5u102l" path="res://MeshLibrary/floor_tiles.tscn" id="2_uil03"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kkxqu"]
size = Vector3(1.98462, 0.179001, 1.99477)

[node name="DestructibleFloor" type="Node3D"]
script = ExtResource("1_j2vmw")

[node name="FloorTiles" parent="." instance=ExtResource("2_uil03")]

[node name="Area3D" type="Area3D" parent="FloorTiles"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloorTiles/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00427246, 0.0636215, -0.00925446)
shape = SubResource("BoxShape3D_kkxqu")

[node name="Timer" type="Timer" parent="FloorTiles/Area3D"]

[connection signal="body_entered" from="FloorTiles/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="FloorTiles/Area3D/Timer" to="." method="_on_timer_timeout"]
